fix scrollbar admonition bug

--- a/themes/LoveIt/assets/css/_partial/_single/_admonition.scss
+++ b/themes/LoveIt/assets/css/_partial/_single/_admonition.scss
@@ -4,7 +4,8 @@
   padding: 0 .75rem;
   background-color: map-get($admonition-background-color-map, 'note');
   border-left: .25rem solid map-get($admonition-color-map, 'note');
-  overflow: auto;
+  overflow-x: auto;
+  overflow-y: hidden;
 
   .admonition-title {
     font-weight: bold;
